# bauxite

./: .gitignore  README.md  mkdocs.yaml  pyproject.toml
bauxite/: __init__.py  constants.py  error.py
bauxite/gateway/: __init__.py  client.py  enums.py  errors.py  ratelimiting.py  shard.py
bauxite/http/: __init__.py  client.py  errors.py  file.py  ratelimiting.py  route.py
docs/: gateway.md  http.md
docs/styles/: dark.css
